--- a/mobile/package.json
+++ b/mobile/package.json
@@ -15,7 +15,7 @@
     "@react-navigation/stack": "^6.3.0",
     "@react-navigation/bottom-tabs": "^6.5.0",
     "@reduxjs/toolkit": "^1.9.0",
-    "react": "18.2.0",
+    "react": "18.3.1",
     "react-native": "0.72.0",
     "react-native-gesture-handler": "^2.12.0",
     "react-native-reanimated": "^3.4.0",
@@ -33,7 +33,7 @@
     "@react-native-firebase/messaging": "^18.3.0",
     "react-native-permissions": "^3.8.0",
     "react-native-geolocation-service": "^5.3.0",
-    "agora-react-native-rtc": "^4.2.0"
+    "react-native-agora": "^4.2.6"
   },
   "devDependencies": {
     "@babel/core": "^7.20.0",
@@ -49,7 +49,7 @@
     "jest": "^29.2.1",
     "metro-react-native-babel-preset": "0.76.5",
     "prettier": "^2.4.1",
-    "react-test-renderer": "18.2.0",
+    "react-test-renderer": "18.3.1",
     "typescript": "4.8.4",
     "detox": "^20.0.0"
   },
