Set up database schema with Prisma migrations
- Update .gitignore to allow Prisma migrations for team collaboration
- Add initial Prisma migration (20251006023809_init)
- Generate Prisma client for database operations
- Database schema now synchronized with PostgreSQL
- All tables created successfully in livedots database

--- a/.gitignore
+++ b/.gitignore
@@ -101,7 +101,7 @@ Thumbs.db
 *.sqlite
 
 # Prisma
-backend/prisma/migrations/
+# backend/prisma/migrations/ # Allow migrations to be committed for team collaboration
 
 # Docker
 *.log
